--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,57 +1,54 @@
-
-
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-body{
-    background-color:rgb(222, 222, 231);
+body {
+    background-color: rgb(222, 222, 231);
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.drive_content{
-    width:1464px;
-    height:100%;
-    padding:20px 20px 0px 20px;
+.drive_content {
+    width: 1464px;
+    height: 100%;
+    padding: 20px 20px 0px 20px;
 
-
-    @media(max-width:1464px) {
+    @media (max-width: 1464px) {
         width: 100%;
     }
-    @media(max-width:425px) {
-        padding:10px 10px 0px 10px;
+    @media (max-width: 425px) {
+        padding: 10px 10px 0px 10px;
     }
 
-    .drive_header{
-        padding:35px;
+    .drive_header {
+        padding: 35px;
     }
 
-
-
-    .drive_holder{
+    .drive_holder {
         position: relative;
-        
-        .height_holder{
+
+        .height_holder {
             position: absolute;
-            top:0;
-            left:0;
+            top: 0;
+            left: 0;
             border-radius: 35px 35px 0px 0px;
-            width:100%;
-            height:100vh;
+            width: 100%;
+            height: 100vh;
             background-color: rgb(193, 194, 224);
         }
 
-        .drive_holder{
-            padding:55px 25px 25px 25px;
+        .drive_holder {
+            padding: 55px 25px 25px 25px;
             position: relative;
-            top:0; left:0;
-            width:100%;
-            height:100%;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
 
             border-radius: 35px 35px 0px 0px;
             background-color: rgb(193, 194, 224);
@@ -62,93 +59,87 @@ body{
             flex-flow: row;
             flex-wrap: wrap;
 
-            gap:20px;
+            gap: 20px;
 
-
-            @media(max-width:425px) {
-                gap:5px;
+            @media (max-width: 425px) {
+                gap: 5px;
             }
 
-            .item{
-                width:290px;
-                height:190px;
+            .item {
+                width: 290px;
+                height: 190px;
 
-                display:inline-block;
+                display: inline-block;
                 justify-content: center;
                 align-items: center;
                 position: relative;
                 overflow: hidden;
 
-                .card_full{
-                    width:100%;
-                    height:100%;
+                .card_full {
+                    width: 100%;
+                    height: 100%;
                     position: absolute;
-                    top:0;
-                    left:0;
+                    top: 0;
+                    left: 0;
 
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     flex-flow: row;
 
-                    .img_card{
-                        width:265.55px;
-                        height:154.83px;
+                    .img_card {
+                        width: 265.55px;
+                        height: 154.83px;
                         border: 1px solid rgba(0, 0, 0, 0.274);
-                        border-radius:21px;
-                        z-index:9999999;
+                        border-radius: 21px;
+                        z-index: 9999999;
                         background-position: center;
                         background-repeat: no-repeat;
                         background-size: cover;
-                        transition: .4s;
+                        transition: 0.4s;
                     }
 
-                    .img_card_a{
+                    .img_card_a {
                         position: absolute;
-                        border-radius:21px;
-                        width:265.55px;
-                        height:154.83px;
+                        border-radius: 21px;
+                        width: 265.55px;
+                        height: 154.83px;
                         border: 1px solid rgba(0, 0, 0, 0.274);
-                        rotate:8.38deg;
+                        rotate: 8.38deg;
                         background-color: rgb(41, 40, 40);
-                        transition: .4s;
+                        transition: 0.4s;
                         background-position: center;
                         background-repeat: no-repeat;
                         background-size: cover;
                     }
-                    .img_card_b{
+                    .img_card_b {
                         position: absolute;
-                        border-radius:21px;
-                        width:265.55px;
-                        height:154.83px;
-                        rotate:-6.88deg;
+                        border-radius: 21px;
+                        width: 265.55px;
+                        height: 154.83px;
+                        rotate: -6.88deg;
                         background-color: rgb(77, 76, 76);
                         border: 1px solid rgba(0, 0, 0, 0.274);
-                        transition: .4s;
+                        transition: 0.4s;
                         background-position: center;
                         background-repeat: no-repeat;
                         background-size: cover;
                     }
 
-                    &:hover{
-
-                        .img_card{
+                    &:hover {
+                        .img_card {
                             background-position: bottom;
                         }
 
-                        .img_card_a{
-                            rotate:-6.88deg;
-                        } 
-                        .img_card_b{
-                            rotate:8.38deg;
+                        .img_card_a {
+                            rotate: -6.88deg;
+                        }
+                        .img_card_b {
+                            rotate: 8.38deg;
                         }
                     }
-
                 }
-
             }
         }
     }
-
-
 }
