--- a/src/style/app.css
+++ b/src/style/app.css
@@ -6,10 +6,22 @@
 }
 
 body {
-  background-color: rgb(222, 222, 231);
+  background-color: rgb(255, 255, 255);
   display: flex;
   justify-content: center;
   align-items: center;
+}
+body::before {
+  position: fixed;
+  top: 0;
+  left: 0;
+  clear: both;
+  content: "";
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(40px); /* Adding 'px' for unit */
+  -webkit-backdrop-filter: blur(40px); /* For Safari */
+  filter: blur(5px);
 }
 
 .popup_sums {
@@ -48,36 +60,70 @@ body {
   height: 100%;
   width: 100%;
   padding: 20px;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  transition: 0.4s;
+}
+.view_img .img .close_img {
+  position: absolute;
+  top: 5%;
+  right: 3%;
+  color: rgb(38, 119, 240);
+  z-index: 999;
 }
 .view_img .img .img_display {
-  width: 95%;
+  transition: 2s;
+  width: 90%;
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
 }
 .view_img .discript {
-  background-color: rgb(135, 182, 204);
+  background-color: rgb(208, 221, 235);
   flex: 0.55;
   height: 100%;
   width: 100%;
   overflow: auto;
+  padding: 20px;
+  transition: 0.4s;
+}
+.view_img .discript .dis_header {
+  margin-top: 10px;
+  font-size: x-large;
+  font-weight: 500;
+  line-height: 23px;
+}
+.view_img .discript .date {
+  margin-top: 10px;
+  font-style: italic;
+  font-size: smaller;
+  color: rgb(53, 51, 51);
+  margin-bottom: 40px;
+}
+.view_img .discript .dis_summary {
+  margin-top: 10px;
+  color: rgba(17, 16, 16, 0.877);
+  font-size: small;
 }
 @media (max-width: 768px) {
   .view_img {
     flex-flow: column;
   }
   .view_img .discript {
-    background-color: rgb(135, 182, 204);
     flex: 0.25;
     height: 100%;
     width: 100%;
-    padding: 20px;
-    overflow: auto;
+    padding: 25px;
+    overflow: hidden;
     border-radius: 35px 35px 0px 0px;
+    text-align: justify;
+  }
+  .view_img .discript p {
+    margin-bottom: 10px;
   }
 }
 
@@ -127,17 +173,24 @@ body {
 .drive_content .drive_holder .drive_btns .dbtn .swap_data {
   margin-right: 20px;
 }
+.drive_content .drive_holder .drive_btns .dbtn .swap_data button {
+  margin-left: 1px;
+}
 .drive_content .drive_holder .drive_btns .dbtn button {
   background-color: transparent;
   outline: 0;
   border: none;
   border-radius: 16px;
-  padding: 5px 20px;
+  padding: 5px 18px;
   cursor: pointer;
   background-color: rgba(75, 129, 247, 0.685);
+  margin-left: 10px;
+  color: rgb(23, 23, 24);
+  transition: 0.4s;
 }
 .drive_content .drive_holder .drive_btns .dbtn button:hover {
-  background-color: rgba(15, 80, 221, 0.685);
+  background-color: rgba(13, 76, 211, 0.685);
+  color: rgb(0, 0, 0);
 }
 @media (max-width: 528px) {
   .drive_content .drive_holder .drive_btns .hidden_btn_android {
@@ -151,7 +204,7 @@ body {
   border-radius: 35px 35px 0px 0px;
   width: 100%;
   height: 100vh;
-  background-color: rgb(193, 194, 224);
+  background-color: rgb(208, 221, 235);
 }
 .drive_content .drive_holder .drive_holder {
   padding: 55px 25px 25px 25px;
@@ -161,7 +214,7 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 35px 35px 0px 0px;
-  background-color: rgb(193, 194, 224);
+  background-color: rgb(208, 221, 235);
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -200,7 +253,7 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.274);
   border-radius: 21px;
   z-index: 9999999;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
   transition: 0.4s;
