--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -5,12 +5,35 @@
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
+$displayback:rgb(208, 221, 235);
+
 body {
-    background-color: rgb(222, 222, 231);
+    background-color: rgb(255, 255, 255);
 
     display: flex;
     justify-content: center;
     align-items: center;
+
+    // background-image: url('https://images.pexels.com/photos/1819650/pexels-photo-1819650.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // background-attachment: fixed;
+
+    &::before{
+        position: fixed;
+        top:0;
+        left:0;
+        clear: both;
+        content: '';
+        width:100%;
+        height:100%;
+        // background-color: rgba(0, 0, 0, 0.281);
+
+        backdrop-filter: blur(40px); /* Adding 'px' for unit */
+        -webkit-backdrop-filter: blur(40px); /* For Safari */
+        filter: blur(5px);
+    }
 }
 
 //======[S] HOVER POPUP
@@ -57,13 +80,25 @@ body {
         height:100%;
         width:100%;
         padding:20px;
+        position: relative;
+
+        .close_img{
+            position: absolute;
+            top:5%;
+            right:3%;
+            color: rgb(38, 119, 240);
+            z-index:999;
+        }
 
         display: flex;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
+        transition: .4s;
 
         .img_display{
-            width:95%;
+            transition: 2s;
+            width:90%;
             height:100%;
             background-position: center;
             background-repeat: no-repeat;
@@ -72,24 +107,61 @@ body {
     }
 
     .discript{
-        background-color: rgb(135, 182, 204);
+        background-color: $displayback;
         flex:.55;
         height:100%;
         width:100%;
         overflow: auto;
+        padding:20px;
+        transition: .4s;
+
+        .dis_header{
+            margin-top:10px;
+            font-size: x-large;
+            font-weight: 500;
+            line-height:23px;
+        }
+
+        .date{
+            margin-top:10px;
+            font-style: italic;
+            font-size: smaller;
+            color: rgb(53, 51, 51);
+            margin-bottom:40px;
+        }
+
+        .dis_summary{
+            margin-top:10px;
+            color: rgba(17, 16, 16, 0.877);
+            font-size: small;
+        }
     }
 
 
     @media(max-width:768px) {
 
+        // .img{
+        //     flex:.40;
+        //     .img_display{
+        //         background-size: cover;
+        //     }
+        // }
+
+
+
         .discript{
-            background-color: rgb(135, 182, 204);
             flex:.25;
+            // flex:2;
             height:100%;
             width:100%;
-            padding:20px;
-            overflow: auto;
+            padding:25px;
+            overflow: hidden;
             border-radius: 35px 35px 0px 0px;
+            text-align: justify;
+            
+            p{
+                margin-bottom:10px;
+            }
         }
 
         flex-flow: column;
@@ -155,6 +227,10 @@ body {
 
                 .swap_data{
                     margin-right:20px;
+
+                    button{
+                        margin-left:1px;
+                    }
                 }
 
 
@@ -164,12 +240,16 @@ body {
                     outline:0;
                     border:none;
                     border-radius:16px;
-                    padding:5px 20px;
+                    padding:5px 18px;
                     cursor: pointer;
                     background-color:rgba(75, 129, 247, 0.685);
+                    margin-left:10px;
+                    color:rgb(23, 23, 24);
+                    transition: .4s;
 
                     &:hover{
-                        background-color:rgba(15, 80, 221, 0.685);
+                        background-color:rgba(13, 76, 211, 0.685);
+                        color:rgb(0, 0, 0);
                     }
 
                 }
@@ -192,7 +272,8 @@ body {
             border-radius: 35px 35px 0px 0px;
             width: 100%;
             height: 100vh;
-            background-color: rgb(193, 194, 224);
+            background-color: $displayback;
+            
         }
 
         .drive_holder {
@@ -204,7 +285,7 @@ body {
             height: 100%;
 
             border-radius: 35px 35px 0px 0px;
-            background-color: rgb(193, 194, 224);
+            background-color: $displayback;
 
             display: flex;
             justify-content: center;
@@ -246,7 +327,7 @@ body {
                         border: 1px solid rgba(0, 0, 0, 0.274);
                         border-radius: 21px;
                         z-index: 9999999;
-                        background-position: center;
+                        background-position: top;
                         background-repeat: no-repeat;
                         background-size: cover;
                         transition: 0.4s;
